# r4

./: Cargo.toml  notes
aggregator/: Cargo.toml
aggregator/src/: array.rs  average.rs  concat.rs  count.rs  count_by.rs  distinct_array.rs  distinct_concat.rs  distinct_count.rs  first.rs  first_record.rs  hash.rs  last.rs  last_record.rs  lexical_max.rs  lexical_min.rs  lexical_percentile.rs  lib.rs  linear_regression.rs  max.rs  min.rs  percentile.rs  record_for_lexical_max.rs  record_for_lexical_min.rs  record_for_lexical_percentile.rs  record_for_max.rs  record_for_min.rs  record_for_percentile.rs  records.rs  sample.rs  standard_deviation.rs  sum.rs
bgop/: Cargo.toml
bgop/src/: lib.rs
clumper/: Cargo.toml
clumper/src/: key.rs  lib.rs  round_robin.rs  window.rs
deaggregator/: Cargo.toml
deaggregator/src/: lib.rs  split.rs  unarray.rs  unhash.rs
executor/: Cargo.toml
executor/src/: ast.rs  lib.rs  parse.lalrpop  tests.rs
misc/: Cargo.toml
operation/: Cargo.toml
operation/src/: aggregate.rs  bg.rs  chain.rs  clumper_options.rs  collate.rs  decollate.rs  deparse.rs  eval.rs  expand_files.rs  expand_lines.rs  from_lines.rs  from_multi_regex.rs  from_regex.rs  from_split.rs  grep.rs  help.rs  join.rs  lib.rs  multiplex.rs  parse.rs  provenance.rs  shell.rs  sort.rs  sort_options.rs  subop_options.rs  test.rs  to_ptable.rs  to_table.rs  tru.rs  with_files.rs  with_lines.rs  wrap_lines.rs  xform.rs
opts/: Cargo.toml
r4/: Cargo.toml
record/: Cargo.toml
registry/: Cargo.toml
registry_args/: Cargo.toml
registry_args_derive/: Cargo.toml
sort/: Cargo.toml
sorts/: Cargo.toml
src/: bgop.rs  main.rs  wns.rs
stream/: Cargo.toml
stream_process/: Cargo.toml
stream_stdout/: Cargo.toml
todo/: main  r4l  rlua  stream-closures  subop
validates/: Cargo.toml
validates_derive/: Cargo.toml
wns/: Cargo.toml
(+42 files in other folders)
