[package]
name = "operation"
version = "1.0.0"
authors = ["Keith Amling <me@amling2.org>"]

[dependencies]
aggregator = { path = "../aggregator" }
bgop = { path = "../bgop" }
clumper = { path = "../clumper" }
deaggregator = { path = "../deaggregator" }
opts = { path = "../opts" }
record = { path = "../record" }
registry = { path = "../registry" }
sort = { path = "../sort" }
stream = { path = "../stream" }
stream_process = { path = "../stream_process" }
validates = { path = "../validates" }
validates_derive = { path = "../validates_derive" }
lazy_static = "1.2.0"
regex = "1"
serde_json = "1.0"
